# Core_Rank03_flyin

./: .gitignore  Makefile  README.md  default_map.txt  flyin.py  main.py  pyproject.toml
images/: drone1.xpm
images copy/: drone2.xpm
invalid_maps/: map1.txt  map10.txt  map11.txt  map12.txt  map13.txt  map14.txt  map15.txt  map16.txt  map17.txt  map18.txt  map19.txt  map2.txt  map20.txt  map21.txt  map22.txt  map3.txt  map4.txt  map5.txt  map6.txt  map7.txt  map8.txt  map9.txt
maps/easy/: 02_simple_fork.txt  example_map.txt
maps/hard/: 03_ultimate_challenge.txt
maps/my_maps/: circular_map1.txt  invalid_map2.txt  invalid_map3.txt  priority_map1.txt  restricted_map1.txt
mlx_CLXV/python/src/mlx/test/: mlxtest.py
my_maps/: priority_map1.txt
src/parser/: map_constructor.py  map_parser.py  parsing_errors.py
src/simulator/: helpers.py  path_finder.py  simulation_engine.py
src/visualizer/: data_classes.py  drone_animation.py  map_visualizer.py
src/visualizer/mlx_tools/: alphabets.xpm  base_mlx.py  image_operations.py  letter_to_img_map.py  shape_maker.py
srcs/: GraphConstructor.py  GraphVisualizer.py  GraphVisulizer.py  LetterToImageMaker.py  Manager.py  MapParser.py  PathFinder.py  ShapeMaker.py  Simulator.py  custom_errors.py  helpers.py
srcs/mlx_tools/: BaseMLX.py  ImageOperations.py  LetterToImageMapper.py  ShapeMaker.py
srcs/parser/: MapParser.py
srcs/simulator/: PathFinder.py  Simulator.py  helpers.py
srcs/visualizer/: DroneAnimation.py  GraphVisualizer.py
srcs/visualizer/mlx_tools/: base_mlx.py  image_operations.py  letter_to_img_map.py
